--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "applay-react",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://kadirumac.github.io/apply",
+  "homepage": "https://kadirumac.github.io/apply/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -41,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "file-loader": "^6.0.0",
+    "url-loader": "^4.0.0"
   }
 }
