--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "applay-react",
   "version": "0.1.0",
+  "homepage": "https://kadirumac.github.io/apply/",
   "private": true,
 
   "dependencies": {
