--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "applay-react",
   "version": "0.1.0",
-  "homepage": "https://kadirumac.github.io/apply/",
+  "homepage": "http://kadirumac.de/",
   "private": true,
 
   "dependencies": {
