--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.11",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
     "prop-types": "^15.7.2",
@@ -18,7 +15,26 @@
     "react-particles-js": "^2.7.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.0.1"
+    "react-three-fiber": "^4.1.1",
+    "styled-components": "^5.0.1",
+    "three": "^0.115.0",
+    "lodash": "4.17.15",
+    "styled-jsx": "3.2.4",
+    "@juggle/resize-observer": "^3.1.3",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
+    "cannon": "^0.6.2",
+    "react-merge-refs": "^1.0.0",
+    "react-promise-suspense": "^0.3.2",
+    "react-reconciler": "^0.25.1",   
+    "react-spring": "^8.0.27",
+    "react-three-gui": "^0.1.5",
+    "react-use-gesture": "^7.0.9",
+    "react-use-measure": "^2.0.0",   
+    "threejs-meshline": "^2.0.10",
+    "tiny-emitter": "^2.1.0",
+    "zustand": "^2.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
